--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 [ ] service discovery
 [ ] usage of multicast addresing (maybe for service discovery)
-[ ] using of names to address translation
+[x] using of names to address translation
 [ ] server starting as a daemon
 [ ] server logging to syslog
 [ ] data sending in a binary format (eg. TLV - Type - Length - Value)
